ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tonbet-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "cas-service"
spec:
  tls:
  - hosts:
    - tonbet.fun
    secretName: letsencrypt-prod
  rules:
    - host: tonbet.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: tonbet-frontend
                port:
                  number: 8081
          - path: /api/v1/(bets|account)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: tonbet-backend
                port:
                  number: 5001
